2008-09-30  Andreas Kupries  <andreask@activestate.com>

	* configure.in: Bumped version to 5.44.1.11.
	* configure: Regen'd, autoconf 2.59.

	* exp_command.c (Exp_OverlayObjCmd): Fixed [Expect SF Bug 2127456]
	  reported by <eee@users.sourceforge.net>, with thanks. Changed
	  retrieval of command from objv[0] (== 'overlay' itself), to
	  objv[i] containing the actual user command.

	* expect.c (string_case_first, string_first, eval_case_string):
	  Applied patch supplied by Andy Belsey <Andrew.Belsey@Sun.COM>
	  fixing the seg.fault in 'expect -exact'. With thanks for both
	  the analysis of the problem and the patch. See also [Expect SF
	  Bug 2114547].

2008-08-28  Andreas Kupries  <andreask@activestate.com>

	* exp_trap.c (tophalf): Fixed inverted condition setting the
	  interpreter used for trap handling to NULL, causing a crash when
	  trying to handle ^C. This fixes [SF Bug 1757471] reported by
	  Matthias Kraft <matzek@users.sourceforge.net>.
	* configure.in: Bumped version to 5.44.1.10.
	* configure: Regen'd, autoconf 2.59.

2008-08-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* exp_main_sub.c (exp_interpreter): cleaner handling of commandPtr
	to prevent crash. (das)

2008-06-03  Andreas Kupries  <andreask@activestate.com>

	* exp_glob.c (Exp_StringCaseMatch2): Fixed bug in the handling of
	  glob classes, see [SF Bug 1873404]. The code tried to match the
	  closing bracket of a class in the input because it was not
	  properly skipped after the class was matched successfully.
	  Additional trace output added.
	* configure.in: Bumped version to 5.44.1.9.
	* configure: Regen'd, autoconf 2.59.

2008-05-05  Andreas Kupries  <andreask@activestate.com>

	* exp_pty.c: Minimal ansification of function definitions to match
	  them to their prototypes where promoted types are otherwise
	  causing a mismatch for some compilers, like AIX in 64bit mode.
	* configure.in: Bumped version to 5.44.1.8.
	* configure: Regen'd, autoconf 2.59.
